@@ -1,6 +1,16 @@
+2012-11-19  Nick Gasson  <nick@nickg.me.uk>
+
+	* src/config_file.c (next_token): allow values with quotes
+	to be set in the config file.
+
+2011-01-28  Justin Bogner  <justin.bogner@emc.com>
+
+	* src/xcowsay.c (main): The reading-speed option requires an
+	argument.
+
 2010-11-11  Nick Gasson  <nick@nickg.me.uk>
-   
-   * xcowsay 1.3 released!
+
+	* xcowsay 1.3 released!
 
 2010-11-06  Nick Gasson  <nick@nickg.me.uk>
 
